@@ -186,17 +186,21 @@ CONFIG_PLATFORM_GENERIC=y
 # CONFIG_OPT_LIB_FUNCTION is not set
 
 #
-# Definitions for MICROBLAZE0
+# Microblaze is microblaze_0
 #
-CONFIG_KERNEL_BASE_ADDR=0x20000000
 CONFIG_XILINX_MICROBLAZE0_FAMILY="virtex5"
 CONFIG_XILINX_MICROBLAZE0_USE_MSR_INSTR=1
 CONFIG_XILINX_MICROBLAZE0_USE_PCMP_INSTR=1
 CONFIG_XILINX_MICROBLAZE0_USE_BARREL=1
 CONFIG_XILINX_MICROBLAZE0_USE_DIV=1
 CONFIG_XILINX_MICROBLAZE0_USE_HW_MUL=1
-CONFIG_XILINX_MICROBLAZE0_USE_FPU=2
+CONFIG_XILINX_MICROBLAZE0_USE_FPU=1
 CONFIG_XILINX_MICROBLAZE0_HW_VER="8.20.a"
+
+#
+# System memory is mpmc_0
+#
+CONFIG_KERNEL_BASE_ADDR=0x20000000
 
 #
 # Processor type and features
