@@ -65,7 +65,7 @@ PTXCONF_XILINX_MICROBLAZE0_USE_PCMP_INSTR=1
 PTXCONF_XILINX_MICROBLAZE0_USE_BARREL=1
 PTXCONF_XILINX_MICROBLAZE0_USE_DIV=1
 PTXCONF_XILINX_MICROBLAZE0_USE_HW_MUL=1
-PTXCONF_XILINX_MICROBLAZE0_USE_FPU=2
+PTXCONF_XILINX_MICROBLAZE0_USE_FPU=1
 PTXCONF_XILINX_MICROBLAZE0_HW_VER="8.20.a"
 
 #
