@@ -22,7 +22,7 @@
 #
 # CAUTION:  This file is automatically generated by libgen.
 # Version:  Xilinx EDK 13.2 EDK_O.61xd
-# Today is: Saturday, the 28 of April, 2012; 10:23:58
+# Today is: Thursday, the 03 of May, 2012; 18:43:26
 #
 # Description: Linux 2.6 Configurations
 #
@@ -62,7 +62,7 @@ config XILINX_MICROBLAZE0_USE_HW_MUL
 
 config XILINX_MICROBLAZE0_USE_FPU
 	int "USE_FPU values (0=NONE, 1=BASIC, 2=EXTENDED)"
-	default 2
+	default 1
 
 config XILINX_MICROBLAZE0_HW_VER
 	string "Core version number"
