@@ -22,7 +22,7 @@
 #
 # CAUTION:  This file is automatically generated by libgen.
 # Version:  Xilinx EDK 13.2 EDK_O.61xd
-# Today is: Saturday, the 28 of April, 2012; 10:23:58
+# Today is: Thursday, the 03 of May, 2012; 18:43:26
 #
 # Description: Linux 2.4 Configurations
 #
@@ -91,7 +91,7 @@ define_int CONFIG_XILINX_MICROBLAZE0_USE_PCMP_INSTR 1
 define_int CONFIG_XILINX_MICROBLAZE0_USE_BARREL 1
 define_int CONFIG_XILINX_MICROBLAZE0_USE_DIV 1
 define_int CONFIG_XILINX_MICROBLAZE0_USE_HW_MUL 1
-define_int CONFIG_XILINX_MICROBLAZE0_USE_FPU 2
+define_int CONFIG_XILINX_MICROBLAZE0_USE_FPU 1
 define_int CONFIG_XILINX_MICROBLAZE0_UNALIGNED_EXCEPTIONS 1
 define_int CONFIG_XILINX_MICROBLAZE0_ILL_OPCODE_EXCEPTION 1
 define_int CONFIG_XILINX_MICROBLAZE0_M_AXI_I_BUS_EXCEPTION 0
