@@ -22,7 +22,7 @@
 #
 # CAUTION:  This file is automatically generated by libgen.
 # Version:  Xilinx EDK 13.2 EDK_O.61xd
-# Today is: Saturday, the 28 of April, 2012; 10:23:58
+# Today is: Thursday, the 03 of May, 2012; 18:43:26
 #
 # Description: U-Boot Configurations
 #
@@ -36,8 +36,6 @@ PLATFORM_CPPFLAGS += -mxl-barrel-shift
 PLATFORM_CPPFLAGS += -mno-xl-soft-div
 PLATFORM_CPPFLAGS += -mno-xl-soft-mul
 PLATFORM_CPPFLAGS += -mhard-float
-PLATFORM_CPPFLAGS += -mxl-float-convert
-PLATFORM_CPPFLAGS += -mxl-float-sqrt
 PLATFORM_CPPFLAGS += -mcpu=v8.20.a
 
 # Automatic U-Boot position at 0x2fe00000
