@@ -29,7 +29,7 @@
  *
  * CAUTION:  This file is automatically generated by libgen.
  * Version:  Xilinx EDK 13.2 EDK_O.61xd
- * Today is: Saturday, the 28 of April, 2012; 10:24:01
+ * Today is: Thursday, the 03 of May, 2012; 18:43:28
  *
  * XPS project directory: Xilinx-ML505-MMU-full-13.2
  */
@@ -47,7 +47,7 @@
 		serial1 = &xps_uart_0;
 	} ;
 	chosen {
-		bootargs = "console=ttyS0,115200 root=/dev/mtdblock2 rw rootfstype=jffs2 mtdparts=ae000000.flash:16384k(bpi),4096k(kernel),11776k(rootfs),384k(u-boot-xl)ro,128k(env) debug";
+		bootargs = "console=ttyS0,115200 ubi.mtd=2 root=ubi0:root rootfstype=ubifs rw mtdparts=ae000000.flash:16384k(bpi),4096k(kernel),11776k(rootfs),384k(u-boot-xl)ro,128k(env) debug";
 		linux,stdout-path = "/plb@0/serial@89ff0000";
 	} ;
 	cpus {
@@ -143,7 +143,7 @@
 			xlnx,use-ext-brk = <0x1>;
 			xlnx,use-ext-nm-brk = <0x1>;
 			xlnx,use-extended-fsl-instr = <0x0>;
-			xlnx,use-fpu = <0x2>;
+			xlnx,use-fpu = <0x1>;
 			xlnx,use-hw-mul = <0x1>;
 			xlnx,use-icache = <0x1>;
 			xlnx,use-interrupt = <0x1>;
@@ -334,7 +334,7 @@
 				interrupt-parent = <&xps_intc_0>;
 				interrupts = < 6 2 >;
 				llink-connected = <&PIM2>;
-				local-mac-address = [ 00 0a 35 20 66 00 ];
+				local-mac-address = [ 00 0a 35 b0 c4 00 ];
 				phy-handle = <&phy0>;
 				reg = < 0x88f00000 0x40 >;
 				xlnx,avb = <0x0>;
